--- a/paginas/artists/Camille.html
+++ b/paginas/artists/Camille.html
@@ -16,41 +16,60 @@
 <body>
   <!-- ============ HEADER ============ -->
   <header>
-    <nav class="nav" aria-label="Hoofdnavigatie">
-      <a href="../../" class="brand">VITRIEN</a>
-      <div class="menu" role="menubar">
-        <a href="../../index.html#over" data-lang-nl="Over" data-lang-en="About">Over</a>
-        <a href="../../index.html#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues">Data & locaties</a>
-        <a href="../../index.html#opencall" data-lang-nl="Open call" data-lang-en="Open call">Open call</a>
-        <a href="../../index.html#kunstenaars" data-lang-nl="Kunstenaars" data-lang-en="Artists">Kunstenaars</a>
-        <a href="../../index.html#lov" data-lang-nl="LOV2030" data-lang-en="LOV2030">LOV2030</a>
-        <a href="../../index.html#contact" data-lang-nl="Contact" data-lang-en="Contact">Contact</a>
-      </div>
-      <div class="lang-switch" aria-label="Taalwissel">
-        <button onclick="setLang('nl')" id="lang-nl" class="active">NL</button>|
-        <button onclick="setLang('en')" id="lang-en">EN</button>
-      </div>
-      <button class="burger" aria-label="Open menu" onclick="toggleDrawer()">
-        <span></span><span></span><span></span>
-      </button>
-    </nav>
-    <div class="drawer" id="drawer" aria-hidden="true">
-      <a href="../../index.html#over" onclick="toggleDrawer()">Over</a>
-      <a href="../../index.html#locaties" onclick="toggleDrawer()">Data & locaties</a>
-      <a href="../../index.html#opencall" onclick="toggleDrawer()">Open call</a>
-      <a href="../../index.html#kunstenaars" onclick="toggleDrawer()">Kunstenaars</a>
-      <a href="../../index.html#lov" onclick="toggleDrawer()">LOV2030</a>
-      <a href="../../index.html#contact" onclick="toggleDrawer()">Contact</a>
+  <nav class="nav" aria-label="Hoofdnavigatie">
+    <!-- Logo -->
+    <a href="../../" class="brand" aria-label="VITRIEN — Home">
+      <img src="../../assets/img/logo.png" alt="Vitrien logo">
+    </a>
+
+    <!-- Desktop menu -->
+    <div class="menu" role="menubar">
+      <a href="../../index.html#over" data-lang-nl="Over" data-lang-en="About">Over</a>
+      <a href="../../index.html#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues">Data & locaties</a>
+      <a href="../../index.html#opencall" data-lang-nl="Open call" data-lang-en="Open call">Open call</a>
+      <a href="../../index.html#kunstenaars" data-lang-nl="Kunstenaars" data-lang-en="Artists">Kunstenaars</a>
+      <a href="../../index.html#lov" data-lang-nl="LOV2030" data-lang-en="LOV2030">LOV2030</a>
+      <a href="../../index.html#contact" data-lang-nl="Contact" data-lang-en="Contact">Contact</a>
     </div>
-  </header>
+
+    <!-- Desktop taal-switch -->
+    <div class="lang-switch desktop-only" aria-label="Taalwissel">
+      <button onclick="setLang('nl')" class="active" data-lang="nl">NL</button> |
+      <button onclick="setLang('en')" data-lang="en">EN</button>
+    </div>
+
+    <!-- Hamburger -->
+    <button class="burger" aria-label="Open menu" onclick="toggleDrawer()">
+      <span></span><span></span><span></span>
+    </button>
+  </nav>
+
+  <!-- Mobile drawer -->
+  <div class="drawer" id="drawer" aria-hidden="true">
+    <a href="../../index.html#over" data-lang-nl="Over" data-lang-en="About" onclick="toggleDrawer()">Over</a>
+    <a href="../../index.html#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues" onclick="toggleDrawer()">Data & locaties</a>
+    <a href="../../index.html#opencall" data-lang-nl="Open call" data-lang-en="Open call" onclick="toggleDrawer()">Open call</a>
+    <a href="../../index.html#kunstenaars" data-lang-nl="Kunstenaars" data-lang-en="Artists" onclick="toggleDrawer()">Kunstenaars</a>
+    <a href="../../index.html#lov" data-lang-nl="LOV2030" data-lang-en="LOV2030" onclick="toggleDrawer()">LOV2030</a>
+    <a href="../../index.html#contact" data-lang-nl="Contact" data-lang-en="Contact" onclick="toggleDrawer()">Contact</a>
+
+    <!-- Mobile taal-switch -->
+    <div class="lang-switch mobile-only" aria-label="Taalwissel">
+      <button onclick="setLang('nl')" class="active" data-lang="nl">NL</button> |
+      <button onclick="setLang('en')" data-lang="en">EN</button>
+    </div>
+  </div>
+</header>
 
   <main id="top">
     <!-- ============ HERO ============ -->
     <section class="hero" style="min-height:auto; padding:60px 0 20px">
       <div class="container">
-        <div class="meta">Kunstenaar</div>
+        <div class="meta" data-lang-nl="Kunstenaar" data-lang-en="Artist">Kunstenaar</div>
         <h1>Camille Lemille</h1>
-        <p class="lead">Performance • Drukwerk • Audiovisueel</p>
+        <p class="lead" data-lang-nl="Illustratie • Tekenkunst • Installatie" data-lang-en="Illustration • Drawing • Installation">
+          Illustratie • Tekenkunst • Installatie
+        </p>
       </div>
     </section>
 
@@ -58,7 +77,7 @@
     <section>
       <div class="container">
         <p class="meta" style="margin-top:-8px">
-          <a class="mono-link" href="../../index.html#kunstenaars">← terug naar overzicht</a>
+          <a class="mono-link" href="../../index.html#kunstenaars" data-lang-nl="← terug naar overzicht" data-lang-en="← back to overview">← terug naar overzicht</a>
         </p>
       </div>
     </section>
@@ -67,34 +86,32 @@
     <section>
       <div class="container grid two-col">
         <article>
-          <div class="meta">Biografie</div>
-          <p>
-            Camille Lemille werkt op het snijvlak van performance, drukwerk en audiovisuele media. Ze gebruikt taal en documenten uit het dagelijks leven — formulieren, handleidingen, e-mails — als startpunt voor artistieke interventies. Haar werk beweegt tussen politiek en poëzie, waarbij de banaliteit van bureaucratie een nieuwe betekenis krijgt.
+          <div class="meta" data-lang-nl="Biografie" data-lang-en="Biography">Biografie</div>
+          <p data-lang-nl="Camille Lemille (°1992) onderzoekt in haar werk de grenzen tussen beeld en ruimte. Ze combineert illustratie, tekenen en installaties tot werelden die balanceren tussen speelsheid en ernst. Haar beeldtaal is herkenbaar door het gebruik van zachte lijnen en poëtische composities, waarin persoonlijke verhalen en universele thema’s elkaar kruisen."
+             data-lang-en="Camille Lemille (b. 1992) explores the boundaries between image and space. She combines illustration, drawing and installations into worlds that balance between playfulness and seriousness. Her visual language is recognizable by soft lines and poetic compositions, where personal stories intersect with universal themes.">
+            Camille Lemille (°1992) onderzoekt in haar werk de grenzen tussen beeld en ruimte...
           </p>
+          <div class="meta" style="margin-top:20px" data-lang-nl="Praktisch" data-lang-en="Practical">Praktisch</div>
           <p>
-            Ze studeerde onder meer aan LUCA School of Arts en werkte samen in collectieven die taal en beeld koppelen aan sociale praktijken.
-          </p>
-          <div class="meta" style="margin-top:20px">Praktisch</div>
-          <p>
-            Website: <a class="mono-link" href="#" target="_blank" rel="noopener">https://camillelemille.be/</a><br>
-            Contact: <a class="mono-link" href="mailto:hallo@vitrien.be">camille.lemille@gmail.com</a>
+            Website: <a class="mono-link" href="#" target="_blank" rel="noopener">https://camillelemille.com/</a><br>
+            Contact: <a class="mono-link" href="mailto:camille.lemille@email.com">camille.lemille@email.com</a>
           </p>
         </article>
 
         <article>
-          <div class="meta">Artist statement</div>
-          <p>
-            Mijn werk onderzoekt hoe taalstructuren onze perceptie sturen. Door banale documenten uit hun context te halen en te transformeren tot performance of visueel object, wil ik een ruimte openen waarin regels en conventies bevraagd worden.
+          <div class="meta" data-lang-nl="Artist statement" data-lang-en="Artist statement">Artist statement</div>
+          <p data-lang-nl="Mijn werk ontstaat vanuit een fascinatie voor alledaagse details en hun poëtische potentieel. Ik vertaal observaties in tekeningen en installaties die de kijker uitnodigen om stil te staan en opnieuw te kijken. Zo probeer ik een intieme ruimte te scheppen waarin het kleine groots wordt."
+             data-lang-en="My work stems from a fascination with everyday details and their poetic potential. I translate observations into drawings and installations that invite viewers to pause and look again. In doing so, I aim to create an intimate space where the small becomes significant.">
+            Mijn werk ontstaat vanuit een fascinatie voor alledaagse details...
           </p>
         </article>
       </div>
     </section>
 
-
     <!-- ============ GALLERY ============ -->
     <section>
       <div class="container">
-        <div class="meta">Werk</div>
+        <div class="meta" data-lang-nl="Werk" data-lang-en="Work">Werk</div>
         <div class="grid gallery">
           <figure class="module">
             <img src="../../assets/img/artists/Camille1.jpg" alt="Werk — Camille Lemille">
@@ -105,6 +122,12 @@
           <figure class="module">
             <img src="../../assets/img/artists/Camille3.jpg" alt="Werk — Camille Lemille">
           </figure>
+          <figure class="module">
+            <img src="../../assets/img/artists/Camille4.jpg" alt="Werk — Camille Lemille">
+          </figure>
+          <figure class="module">
+            <img src="../../assets/img/artists/Camille5.jpg" alt="Werk — Camille Lemille">
+          </figure>
         </div>
       </div>
     </section>
@@ -112,7 +135,7 @@
     <!-- ============ TERUGLINK ============ -->
     <section>
       <div class="container">
-        <a class="mono-link" href="../../index.html#kunstenaars">← terug naar alle kunstenaars</a>
+        <a class="mono-link" href="../../index.html#kunstenaars" data-lang-nl="← terug naar alle kunstenaars" data-lang-en="← back to all artists">← terug naar alle kunstenaars</a>
       </div>
     </section>
   </main>
@@ -120,7 +143,7 @@
   <footer>
     <div class="footer-inner">
       <div>© <span id="year"></span> Vitrien — Leuven</div>
-      <a class="mono-link" href="#top">Naar boven</a>
+      <a class="mono-link" href="#top" data-lang-nl="Naar boven" data-lang-en="Back to top">Naar boven</a>
     </div>
   </footer>
 
