--- a/paginas/artists/Niels.html
+++ b/paginas/artists/Niels.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Niels Pioz — VITRIEN</title>
+  <title>Niels Poiz — VITRIEN</title>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,12 +17,9 @@
   <!-- ============ HEADER ============ -->
   <header>
   <nav class="nav" aria-label="Hoofdnavigatie">
-    <!-- Logo -->
     <a href="../../" class="brand" aria-label="VITRIEN — Home">
       <img src="../../assets/img/logo.png" alt="Vitrien logo">
     </a>
-
-    <!-- Desktop menu -->
     <div class="menu" role="menubar">
       <a href="../../index.html#over" data-lang-nl="Over" data-lang-en="About">Over</a>
       <a href="../../index.html#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues">Data & locaties</a>
@@ -31,20 +28,14 @@
       <a href="../../index.html#lov" data-lang-nl="LOV2030" data-lang-en="LOV2030">LOV2030</a>
       <a href="../../index.html#contact" data-lang-nl="Contact" data-lang-en="Contact">Contact</a>
     </div>
-
-    <!-- Desktop taal-switch -->
     <div class="lang-switch desktop-only" aria-label="Taalwissel">
       <button onclick="setLang('nl')" class="active" data-lang="nl">NL</button> |
       <button onclick="setLang('en')" data-lang="en">EN</button>
     </div>
-
-    <!-- Hamburger -->
     <button class="burger" aria-label="Open menu" onclick="toggleDrawer()">
       <span></span><span></span><span></span>
     </button>
   </nav>
-
-  <!-- Mobile drawer -->
   <div class="drawer" id="drawer" aria-hidden="true">
     <a href="../../index.html#over" data-lang-nl="Over" data-lang-en="About" onclick="toggleDrawer()">Over</a>
     <a href="../../index.html#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues" onclick="toggleDrawer()">Data & locaties</a>
@@ -52,8 +43,6 @@
     <a href="../../index.html#kunstenaars" data-lang-nl="Kunstenaars" data-lang-en="Artists" onclick="toggleDrawer()">Kunstenaars</a>
     <a href="../../index.html#lov" data-lang-nl="LOV2030" data-lang-en="LOV2030" onclick="toggleDrawer()">LOV2030</a>
     <a href="../../index.html#contact" data-lang-nl="Contact" data-lang-en="Contact" onclick="toggleDrawer()">Contact</a>
-
-    <!-- Mobile taal-switch -->
     <div class="lang-switch mobile-only" aria-label="Taalwissel">
       <button onclick="setLang('nl')" class="active" data-lang="nl">NL</button> |
       <button onclick="setLang('en')" data-lang="en">EN</button>
@@ -66,9 +55,9 @@
     <section class="hero" style="min-height:auto; padding:60px 0 20px">
       <div class="container">
         <div class="meta" data-lang-nl="Kunstenaar" data-lang-en="Artist">Kunstenaar</div>
-        <h1>Niels Pioz</h1>
-        <p class="lead" data-lang-nl="Performance • Muziek • Installatie" data-lang-en="Performance • Music • Installation">
-          Performance • Muziek • Installatie
+        <h1>Niels Poiz</h1>
+        <p class="lead" data-lang-nl="Beeldende kunst • Performance • Publicaties" data-lang-en="Visual arts • Performance • Publications">
+          Beeldende kunst • Performance • Publicaties
         </p>
       </div>
     </section>
@@ -87,22 +76,23 @@
       <div class="container grid two-col">
         <article>
           <div class="meta" data-lang-nl="Biografie" data-lang-en="Biography">Biografie</div>
-          <p data-lang-nl="Niels Pioz (°1990) beweegt zich op het kruispunt van performance, muziek en beeldende kunst. Zijn werk onderzoekt hoe geluid, lichaam en ruimte met elkaar resoneren en zo nieuwe ervaringen oproepen. Met improvisatie en samenwerking als uitgangspunt creëert hij telkens unieke situaties waarin publiek en performer gelijkwaardig deel uitmaken."
-             data-lang-en="Niels Pioz (b. 1990) works at the intersection of performance, music and visual art. His practice explores how sound, body and space resonate with each other to evoke new experiences. With improvisation and collaboration as a starting point, he creates unique situations in which audience and performer participate on equal footing.">
-            Niels Pioz (°1990) beweegt zich op het kruispunt van performance, muziek en beeldende kunst...
+          <p data-lang-nl="Niels Poiz (°1991, Torhout) woont en werkt in Brussel. Hij behaalde een MFA aan LUCA School of Arts (Brussel) en een Post-Master Arts & Design aan Sint-Lucas Antwerpen. Sindsdien exposeerde hij internationaal in solo- en groepstentoonstellingen, performancemanifestaties en Art Book Fairs. Zijn werk richt zich op taal, narratie en communicatie, met aandacht voor sociaal-politieke, culturele, identiteits- en genderkwesties. Naast zijn eigen praktijk is Poiz actief als curator, programmator van het Brussels Queer Zine Fest en gastdocent. Momenteel werkt hij vanuit MAX Collective in Brussel."
+             data-lang-en="Niels Poiz (b. 1991, Torhout) lives and works in Brussels. He holds an MFA from LUCA School of Arts (Brussels) and a Post-Master in Arts & Design from Sint-Lucas Antwerp. Since then, he has exhibited internationally in solo and group shows, performance festivals and Art Book Fairs. His work focuses on language, narration and communication, addressing socio-political, cultural, identity and gender issues. Besides his artistic practice, Poiz is active as a curator, programmer of the Brussels Queer Zine Fest and guest lecturer. He currently works from MAX Collective in Brussels.">
+            Niels Poiz (°1991, Torhout) woont en werkt in Brussel...
           </p>
           <div class="meta" style="margin-top:20px" data-lang-nl="Praktisch" data-lang-en="Practical">Praktisch</div>
           <p>
-            Website: <a class="mono-link" href="#" target="_blank" rel="noopener">https://nielspioz.com/</a><br>
-            Contact: <a class="mono-link" href="mailto:niels@email.com">niels@email.com</a>
+            Email: <a class="mono-link" href="mailto:poizniels@gmail.com">poizniels@gmail.com</a><br>
+            Instagram: <a class="mono-link" href="https://instagram.com/niels_poiz" target="_blank">@niels_poiz</a><br>
+            Website: <a class="mono-link" href="https://poizniels.wixsite.com/-text-archive" target="_blank">poizniels.wixsite.com/-text-archive</a>
           </p>
         </article>
 
         <article>
           <div class="meta" data-lang-nl="Artist statement" data-lang-en="Artist statement">Artist statement</div>
-          <p data-lang-nl="Mijn werk vertrekt vanuit de lichamelijke ervaring van geluid. Ik onderzoek hoe stem, ritme en stilte ruimtelijke en emotionele landschappen vormen. Elke performance is een uitnodiging om samen een tijdelijke wereld te betreden waar grenzen tussen muziek, kunst en publiek vervagen."
-             data-lang-en="My work originates from the bodily experience of sound. I explore how voice, rhythm and silence shape spatial and emotional landscapes. Each performance invites us to enter a temporary world where the boundaries between music, art and audience dissolve.">
-            Mijn werk vertrekt vanuit de lichamelijke ervaring van geluid...
+          <p data-lang-nl="De artistieke praktijk van Poiz focust op schrijven en taal via narratie, vertaling en appropriation van tekst. Hij gebruikt fragmenten uit populaire cultuur, cybercultuur, media en muziek, die hij verweeft met eigen teksten. Woorden worden losgemaakt van hun oorspronkelijke betekenis en krijgen een nieuwe lading in performances, installaties, prints, video’s en micro-edities. Door dit spel met taal bevraagt Poiz communicatie, identiteit en de spanning tussen individu en maatschappij. Zijn werk vertaalt persoonlijke verhalen en universele vraagstukken in fysieke ruimte en benadrukt de kracht en fragiliteit van taal."
+             data-lang-en="Poiz’s artistic practice focuses on writing and language through narration, translation and textual appropriation. Using fragments from popular culture, cyber culture, media and music, interwoven with his own writing, he detaches words from their original meaning and recharges them in performances, installations, prints, videos and micro-editions. Through this play with language, Poiz questions communication, identity and the tension between the individual and society. His work translates personal narratives and universal issues into physical space, underlining the power and fragility of language.">
+            De artistieke praktijk van Poiz focust op schrijven en taal via narratie, vertaling en appropriation van tekst...
           </p>
         </article>
       </div>
@@ -114,19 +104,19 @@
         <div class="meta" data-lang-nl="Werk" data-lang-en="Work">Werk</div>
         <div class="grid gallery">
           <figure class="module">
-            <img src="../../assets/img/artists/Niels1.jpg" alt="Werk — Niels Pioz">
+            <img src="../../assets/img/artists/Niels1.jpg" alt="Werk — Niels Poiz">
           </figure>
           <figure class="module">
-            <img src="../../assets/img/artists/Niels2.jpg" alt="Werk — Niels Pioz">
+            <img src="../../assets/img/artists/Niels2.jpg" alt="Werk — Niels Poiz">
           </figure>
           <figure class="module">
-            <img src="../../assets/img/artists/Niels3.jpg" alt="Werk — Niels Pioz">
+            <img src="../../assets/img/artists/Niels3.jpg" alt="Werk — Niels Poiz">
           </figure>
           <figure class="module">
-            <img src="../../assets/img/artists/Niels4.jpg" alt="Werk — Niels Pioz">
+            <img src="../../assets/img/artists/Niels4.jpg" alt="Werk — Niels Poiz">
           </figure>
           <figure class="module">
-            <img src="../../assets/img/artists/Niels5.jpg" alt="Werk — Niels Pioz">
+            <img src="../../assets/img/artists/Niels5.jpg" alt="Werk — Niels Poiz">
           </figure>
         </div>
       </div>
@@ -150,4 +140,3 @@
   <script src="../../assets/js/app.js" defer></script>
 </body>
 </html>
-
